[581638] Fix query example in recursion documentation
Change-Id: I58296fba405e4de7e3ef4d799cff536a22b7ba84
Signed-off-by: Gábor Bergmann <gabor.bergmann@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/query-language.asciidoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/query-language.asciidoc
@@ -267,7 +267,7 @@ pattern qualifiedName(node : Node, name) {
     // for a child element, compose from parents qualified name
     find parent(node, parentNode);
     Node.simpleName(node, simpleName);
-    find qualifiedName(parent, parentName); // recursive call
+    find qualifiedName(parentNode, parentName); // recursive call
     name == eval (parentName + "." + simpleName);
   } or { 
     // for a root element, just use the simple name
